--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,27 +6,27 @@
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/hero-mobile@1x.jpg);
+    url(../images/hero-mobile@1x.jpg);
   background-color: #2f303a;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url(../../images/hero-mobile@2x.jpg);
+    background-image: url(../images/hero-mobile@2x.jpg);
   }
 
   @media screen and (min-width: 481px) {
-    background-image: url(../../images/hero-tablet@1x.jpg);
+    background-image: url(../images/hero-tablet@1x.jpg);
     max-width: 768px;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(../../images/hero-tablet@2x.jpg);
+      background-image: url(../images/hero-tablet@2x.jpg);
     }
   }
 
   @media screen and (min-width: 769px) {
-    background-image: url(../../images/hero-desktop@1x.jpg);
+    background-image: url(../images/hero-desktop@1x.jpg);
 
     max-width: 1600px;
     height: 600px;
@@ -34,7 +34,7 @@
     padding-bottom: 200px;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(../../images/hero-desktop@2x.jpg);
+      background-image: url(../images/hero-desktop@2x.jpg);
     }
   }
 }
