--- a/css/main.css
+++ b/css/main.css
@@ -407,23 +407,23 @@ header {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../../images/hero-mobile@2x.jpg);
+    background-image: url(../images/hero-mobile@2x.jpg);
   }
 }
 @media screen and (min-width: 481px) {
   .hero {
-    background-image: url(../../images/hero-tablet@1x.jpg);
+    background-image: url(../images/hero-tablet@1x.jpg);
     max-width: 768px;
   }
 }
 @media screen and (min-width: 481px) and (min-device-pixel-ratio: 2), screen and (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 481px) and (min-resolution: 192dpi), screen and (min-width: 481px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../../images/hero-tablet@2x.jpg);
+    background-image: url(../images/hero-tablet@2x.jpg);
   }
 }
 @media screen and (min-width: 769px) {
   .hero {
-    background-image: url(../../images/hero-desktop@1x.jpg);
+    background-image: url(../images/hero-desktop@1x.jpg);
     max-width: 1600px;
     height: 600px;
     padding-top: 200px;
@@ -432,7 +432,7 @@ header {
 }
 @media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../../images/hero-desktop@2x.jpg);
+    background-image: url(../images/hero-desktop@2x.jpg);
   }
 }
 
