--- a/css/main.css
+++ b/css/main.css
@@ -1415,7 +1415,7 @@ address {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 77px 24px;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.8980392157);
   font-weight: 400;
@@ -1432,6 +1432,16 @@ address {
 .portfolio__card:hover .portfolio__overlay, .portfolio__card:focus .portfolio__overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+@media screen and (min-width: 768px) {
+  .portfolio__overlay {
+    padding: 49px 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__overlay {
+    padding: 63px 24px;
+  }
 }
 
 .portfolio__card {
