--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -92,7 +92,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 77px 24px;
   color: #ffffff;
   background-color: #2196f3e5;
   font-weight: 400;
@@ -106,6 +106,14 @@
   .portfolio__card:hover &,
   .portfolio__card:focus & {
     transform: translateY(0);
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
   }
 }
 
